# Chrome-DevTools-rs

./: .gitignore  Cargo.toml  LICENSE  NOTES.txt  README.md  build.rs
.github/workflows/: rust.yml
bindgen/: Cargo.toml
bindgen/src/: lib.rs
bindgen/src/protocol/: convention.rs  mod.rs  modular.rs  parsing.rs  post_ast.rs  rustify.rs
bindgen/src/util/: mod.rs
macros/: Cargo.toml  SOURCES
macros/src/: lib.rs  protocol_test.rs
macros/src/protocol/: convention.rs  mod.rs  modular.rs  parsing.rs  post_ast.rs  rustify.rs
macros/src/protocol/rustify/: mod.rs  recursive.rs
macros/src/protocol/types/: convention.rs  mod.rs
macros/src/util/: fake_utils.rs  mod.rs
src/: lib.rs  protocol.rs  util.rs
ts/: package-lock.json  package.json  parser.ts  ref.d.ts
