[package]
name = "chrome-devtools-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.180", features = ["serde_derive", "derive"]}
serde_json = "1.0.104"

[dependencies.chrome-devtools-macros]
path = "./macros"

[features]
latest = ["chrome-devtools-macros/latest"]
