[package]
name = "chrome-devtools-bindgen"
version = "0.1.0"
edition = "2021"
authors = ["sammy99jsp <sammy99jsp@avdanos.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6.0"
prettyplease = "0.2.12"
proc-macro2 = "1.0.66"
quote = "1.0.32"
reqwest = {version = "0.11.18", optional = true, features = ["blocking"]}
serde = {version = "1.0.183", features = ["derive", "serde_derive"]}
serde_json = "1.0.104"
syn = {version = "2.0.28", features = ["full"]}
thiserror = "1.0.44"

[features]
latest = ["dep:reqwest"]